crates/service/tests/references/snapshots/features__references__ty__struct_def_int_idx.snap
---
source: crates/service/tests/references/ty.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 3
      },
      "end": {
        "line": 2,
        "character": 7
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    }
  }
]
