crates/service/tests/references/snapshots/features__references__ty__type_use_ident_idx.snap
---
source: crates/service/tests/references/ty.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 10
      },
      "end": {
        "line": 2,
        "character": 15
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 16
      },
      "end": {
        "line": 3,
        "character": 17
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 16
      },
      "end": {
        "line": 4,
        "character": 21
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 15
      },
      "end": {
        "line": 5,
        "character": 20
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 39
      },
      "end": {
        "line": 5,
        "character": 44
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 20
      },
      "end": {
        "line": 6,
        "character": 25
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 16
      },
      "end": {
        "line": 7,
        "character": 21
      }
    }
  }
]
